# pyPhysX

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
resources/: analysis-freq.py  analysis.py  dog3d.txt  dog3d_my.txt  dogm.txt  gen_accu_test.py  perf.py  plotter.py  sample.py  snake-long.txt  spd-aba.patch  test.txt  testMotion.txt
resources/motions/: backflip.txt  cartwheel.txt  dog0.txt  dog01.txt  dog3d_canter_wrap.txt  dog3d_pace_wrap.txt  dog3d_trot_wrap.txt  dog3d_turn_wrap.txt  dogpace.txt  dogrun.txt  dogtrot.txt  humanoid3d_backflip.txt  humanoid3d_cartwheel.txt  humanoid3d_run.txt  run.txt  slither.txt  slither_long.txt
resources/motions/crop/: dogcanter.txt  dogpace.txt  dogtrot.txt  humanoid3d_run.txt
src/: api.i  articulationTree.cpp  articulationTree.h  config.txt  control.cpp  globals.h  keyboard.cpp  loader.cpp  main.cpp  renderer.cpp  robot.cpp  robot.h  sparseLTL.cpp
src/actors/: Actor.cpp
src/actors/include/: Actor.h  Actor.i  PrimitiveObjects.h  PrimitiveObjects.i
src/articulation/: Articulation.cpp  ArticulationDescriptionNode.cpp  ArticulationElements.cpp  ArticulationTree.cpp  JsonLoader.cpp  Kinematic.cpp  LinkBody.cpp  UrdfLoader.cpp
src/articulation/include/: Articulation.h  Articulation.i  ArticulationDescriptionNode.h  ArticulationElements.h  ArticulationElements.i  ArticulationTree.h  JsonLoader.i  LinkBody.h  UrdfLoader.h  UrdfLoader.i
src/articulation/spd/: spd_ABA.cpp  spd_Acc.cpp  spd_Dense.cpp  spd_Sparse.cpp
src/common/: globals.cpp
src/common/include/: CommonMath.h  IDisposable.h  MathInterface.h
src/core/: Actor.cpp  Foundation.cpp  Scene.cpp  config.cpp  control.cpp  loader.cpp  robot.cpp
src/core/include/: Actor.h  Foundation.h  IDisposable.h  Scene.h  Scene.i  globals.h  linkBody.h
src/examples/poseTracking/: config.cpp  config.h  config.txt  control.cpp  main.cpp  robot.cpp
src/examples/snake/: snake.cpp
src/renderer/glut/: GlutCamera.cpp  GlutRenderer.cpp  GlutRendererLowLevel.cpp
src/renderer/glut/include/: GlutCamera.h  GlutRenderer.h  GlutRendererLowLevel.h
src/renderer/unity/: UnityRenderer.cpp
src/renderer/unity/include/: UnityRenderer.h  UnityRenderer.i
src/tests/: ArticulationTest.cpp  ArticulationTestResources.cpp  ArticulationTestResources.h  PerformanceIntegration.cpp  UrdfLoaderTest.cpp
src/unused/: sparseLTL.h
wiki/: CollisionSystem.md  SPDABA.md  Setup.md  collisions.md  urdfLoader.md
